--- a/style.css
+++ b/style.css
@@ -42,6 +42,7 @@ font-family: serif;
 font-style: italic;
 color: #ff471a;
 position: fixed;
+top: 10px;
 
 }
 
@@ -52,11 +53,20 @@ position: fixed;
 
 text-align: left;
 font-family: sans-serif;
-margin-right: 5.5px;
+/* margin-right: 5.5px;
 margin-left: 5.5px;
 margin-bottom: 5.5px;
-margin-top: 150px;
+margin-top: 150px; */
 position: fixed;
+left: 10px;
+height: 100vh;
+display: flex;
+flex-direction: column;
+justify-content: center;
+top:0;
+/* top: 50%;
+transform: translateY(-50%); */
+
 
 }
 
@@ -83,13 +93,13 @@ padding: 5px;
 
 .next {
 
-  margin-left: 30%;
-  margin-bottom: 0px;
-  margin-top: 5.5px;
+
 font-family: sans-serif;
 font-size: 70px;
 color: blue;
-position: relative;
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
 
 
 }
