--- a/style.css
+++ b/style.css
@@ -42,7 +42,7 @@ font-family: serif;
 font-style: italic;
 color: #ff471a;
 position: fixed;
-top: 10px;
+top: 5px;
 
 }
 
@@ -97,9 +97,10 @@ padding: 5px;
 font-family: sans-serif;
 font-size: 70px;
 color: blue;
-  position: absolute;
+  position: fixed;
   left: 50%;
   transform: translateX(-50%);
+  bottom: 5px;
 
 
 }
