--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ a:visited {
 
 /* mouse over link */
 a:hover {
-  color: hotpink;
+  color: #ff9100;
 }
 
 /* selected link */
@@ -42,7 +42,7 @@ font-family: serif;
 font-style: italic;
 color: #ff471a;
 position: fixed;
-top: 5px;
+top: 0px;
 
 }
 
@@ -95,12 +95,12 @@ padding: 5px;
 
 
 font-family: sans-serif;
-font-size: 70px;
+font-size: 40px;
 color: blue;
   position: fixed;
   left: 50%;
   transform: translateX(-50%);
-  bottom: 5px;
+  bottom: 3px;
 
 
 }
