--- a/style.css
+++ b/style.css
@@ -1,18 +1,18 @@
 /* unvisited link */
 a:link {
-  color: #ff471a;
+  color: #0099ff;
   text-decoration: none;
 }
 
 /* visited link */
 a:visited {
-  color: #ff471a;
+  color: #0099ff;
   text-decoration: none;
 }
 
 /* mouse over link */
 a:hover {
-  color: #ff9100;
+  color: white;
   text-decoration: none;
 }
 
@@ -21,6 +21,9 @@ a:active {
   color: #ff471a;
   text-decoration: none;
 }
+
+
+
 
 .content {
 
@@ -43,7 +46,7 @@ margin-top: 0px;
 font-size: 60px;
 font-family: serif;
 font-style: italic;
-color: #ff471a;
+color: #DF0101;
 position: fixed;
 top: 0px;
 
@@ -54,6 +57,7 @@ top: 0px;
 
 .sidebar {
 
+font-size: 30px;
 text-align: left;
 font-family: sans-serif;
 /* margin-right: 5.5px;
@@ -73,33 +77,15 @@ transform: translateY(-50%); */
 
 }
 
-.indexgif {
-  width: 100%;
-  height: 920px;
-  background-image: url('if.gif');
-  background-size: 100% 100%;
-}
-
-.bottomindex {
-
-font-size: 20px;
-color: #ff471a;
-font-family: sans-serif;
-left: 25%;
-bottom: 10px;
-margin-right: 20%;
-position: fixed;
-
-}
 
 .linkscontent {
 
   text-align: left;
-  font-family: sans-serif;
-  font-size: 30px;
+  font-family: serif;
+  font-size: 20px;
   margin-left: 25%;
   margin-bottom: 100px;
-  margin-top: 200px;
+  margin-top: 400px;
 
 
 
