--- a/style.css
+++ b/style.css
@@ -4,6 +4,13 @@ a:link {
   text-decoration: none;
 }
 
+a:visited {
+  color: #0099ff;
+  background-color: transparent;
+  text-decoration: none;
+
+}  
+
 /* mouse over link */
 a:hover {
   color: white;
