--- a/style.css
+++ b/style.css
@@ -1,19 +1,20 @@
 /* unvisited link */
 a:link {
-  color: #0099ff;
+  color: white;
   text-decoration: none;
 }
 
 a:visited {
-  color: #0099ff;
+  color: white;
   background-color: transparent;
   text-decoration: none;
 
-}  
+}
 
 /* mouse over link */
 a:hover {
-  color: white;
+  color:  #0066ff
+;
   text-decoration: none;
 }
 
