--- a/style.css
+++ b/style.css
@@ -13,8 +13,7 @@ a:visited {
 
 /* mouse over link */
 a:hover {
-  color:  #0066ff
-;
+  color:  #FF2A00;
   text-decoration: none;
 }
 
@@ -79,11 +78,15 @@ transform: translateY(-50%); */
 .linkscontent {
 
   text-align: left;
-  font-family: serif;
-  font-size: 20px;
-  margin-left: 25%;
+  font-family: sans-serif;
+  font-size: 60px;
+  margin-left: 250px;
   margin-bottom: 100px;
-  margin-top: 400px;
+  margin-top: 100px;
+
+
+
+
 
 
 
@@ -114,9 +117,9 @@ color: blue;
 
 .pgallery {
 
-  margin-left: 190px;
+  margin-left: 500px;
   margin-top: 100px;
-  
+
 
 
 }
